.fourth-container is completed.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <div class="one-third-container">
     <img src="assets/images/image-retro-pcs.jpg">
-    <div class="contaner">
+    <div class="content">
       <h4>01</h4>
       <h5>Reviving Retro PCs</h5>
       <p>What happens when old PCs are given modern upgrades?</p>
