final touches. still need to add a backgound to page behind menu pop up.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <ul>
             <li>Home</li>
             <li>New</li>
+            <li>Popular</li>
             <li>Trending</li>
             <li>Catagories</li>
           </ul>
