Rezised to a 370px mobile screen

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     
     <h4>Hydrogen VS Electric Cars</h4>
 
-    <p>hydrogen-fueled cars ever catch up to EVs?</p>
+    <p>Willhydrogen-fueled cars ever catch up to EVs?</p>
   
   </div>
 
