wrapped up desktop design but will need to design for tablet.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   </style>
 </head>
 <body>
-<div class="main-container">
 <!--Header starts here-->
 <header>
   <div class="one-container">
@@ -47,18 +46,21 @@
   </div>
  </header>
  <!--Header ends here-->
+ <div class="main-container">
 <div class="second-container">
 
   <div class="full-image">
     <img src="assets/images/image-web-3-mobile.jpg">
   </div>
+  <div class="section-content">
   <h2>The Bright Future of Web 3.0?</h2>
-
+<div class="description">
   <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
     But is it really fulfilling its promise?</p>
 
   <button>Read more</button> 
-
+</div>
+</div>
 </div>
 
 <!--New container starts -->
@@ -92,6 +94,8 @@
   </div>
 
 </div>
+</div>
+
 
 <!--New contaner ends -->
 <div class="fourth-container">
@@ -125,8 +129,9 @@
     </div>
 
   </div>
+</div> <!--End of main-container-->
 
-</div>
+
 
   
   <div class="attribution">
@@ -134,7 +139,6 @@
     Coded by <a href="#">Vanesa</a>.
   </div>
 
-</div> <!--End of main-container-->
 <script src="./script.js"></script>
 
 </body>
