Dev branch is up to date with all 3 branches.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
   <div class="one-third-container">
     <img src="assets/images/image-gaming-growth.jpg ">
-    <div class="content">
+    <div class="content" id="third-card">
       <h4>03</h4>
       <h5>The Growth of Gaming</h5>
       <p>How the pandemic has sparked fresh opportunities.</p>
